 cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods-ywhieyg.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-mitre-t1552-block-cloud-instance-metadata-access-from-pods"--e0s01g
  namespace: kube-system
spec:
  description: "The policy will block access to cloud metadata ips from containers"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 56889964d4
      k8s-app: cilium
      pod-template-generation: 1
  egress:
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 169.254.169.254/32
      - 169.254.170.2/32
